--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -20,3 +20,8 @@ body {
         padding: 20px;
     }
 }
+
+.btn-primary{
+    background-color: #cab44b !important;
+    border-color: #cab44b !important;
+}
